--- a/index.html
+++ b/index.html
@@ -276,6 +276,169 @@
 
 
 
+			<div class="single-recent-blog col-lg-4 col-md-4">
+				<div class="thumb">
+					<a href="https://www.kaggle.com/code/uuratl/backpack-prediction-with-stackingregressor" target="_blank">
+					<img class="f-img img-fluid" src="img/cover/backpack-cover.jpg" alt="" style="width:250px;height:250px;">
+				</a>
+				</div>
+				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+
+				</div>
+				<a href="https://www.kaggle.com/code/uuratl/backpack-prediction-with-stackingregressor" target="_blank">
+					<h4>Backpack Prediction with StackingRegressor </h4>
+				</a>
+				<p>
+					Making analysis for backpack with different brands and features, and making model for price prediction using <a href="https://www.kaggle.com/competitions/playground-series-s5e2/data">Backpack Data</a>. Model uses combinations of several models, CATboostRegressor, LGBMRegressor, XGBRegressor with their optimal parameters from OPTUNA and linear regressor as meta learner. 
+			</div>
+
+
+			<div class="single-recent-blog col-lg-4 col-md-4">
+				<div class="thumb">
+					<a href="https://www.kaggle.com/code/uuratl/sticker-sales-lgbm" target="_blank">
+					<img class="f-img img-fluid" src="img/cover/forecast_sales.jpg" alt="" style="width:250px;height:250px;">
+				</a>
+				</div>
+				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+
+				</div>
+				<a href="https://www.kaggle.com/code/uuratl/sticker-sales-lgbm" target="_blank">
+					<h4>Sticker Sales LGBM </h4>
+				</a>
+				<p>
+					Sticker sale prediction using <a href="https://www.kaggle.com/competitions/playground-series-s5e1/data">Forecasting Sticker Sales Data</a> and LGBMRegressor with optimized parameters from OPTUNA. 
+			</div>
+
+
+
+
+			<div class="single-recent-blog col-lg-4 col-md-4">
+				<div class="thumb">
+					<a href="https://www.kaggle.com/code/uuratl/metacritic-content-based-game-recomendation" target="_blank">
+					<img class="f-img img-fluid" src="img/cover/meta_dataset-cover.jpg" alt="" style="width:250px;height:250px;">
+				</a>
+				</div>
+				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+
+				</div>
+				<a href="https://www.kaggle.com/code/uuratl/metacritic-content-based-game-recomendation" target="_blank">
+					<h4>Metacritic Content Based Game Recomendation</h4>
+				</a>
+				<p>
+					Making content based recomendation system with combinations of cosine similary and Euclidean distance formula by using game data 
+					<a href="https://www.kaggle.com/datasets/uuratl/metacritic-games-12-23-2024">Metacritic Games 1995-2024</a>. Data collected from 
+					<a href="https://www.metacritic.com/browse/game/">metacritic</a> with code   <a href="https://www.kaggle.com/code/uuratl/metacritic-data-collect/">Metacritic Data Collect</a>.
+			</div>
+
+
+
+			<div class="single-recent-blog col-lg-4 col-md-4">
+				<div class="thumb">
+					<a href="https://www.kaggle.com/code/uuratl/metacritic-games-eda" target="_blank">
+					<img class="f-img img-fluid" src="img/cover/meta_dataset-cover.jpg" alt="" style="width:250px;height:250px;">
+				</a>
+				</div>
+				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+
+				</div>
+				<a href="https://www.kaggle.com/code/uuratl/metacritic-games-eda" target="_blank">
+					<h4>Metacritic Games Eda</h4>
+				</a>
+				<p>
+					Exploratory data analysis and data cleaning for <a href="https://www.kaggle.com/datasets/uuratl/metacritic-games-12-23-2024">Metacritic Games 1995-2024</a> data.
+			</div>
+
+
+
+			<div class="single-recent-blog col-lg-4 col-md-4">
+				<div class="thumb">
+					<a href="https://www.kaggle.com/code/uuratl/metacritic-data-collect/" target="_blank">
+					<img class="f-img img-fluid" src="img/cover/meta_dataset-cover.jpg" alt="" style="width:250px;height:250px;">
+				</a>
+				</div>
+				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+
+				</div>
+				<a href="https://www.kaggle.com/code/uuratl/metacritic-data-collect/" target="_blank">
+					<h4>Metacritic Data Collect  </h4>
+				</a>
+				<p>
+					BS4 code for collecting data from <a href="https://www.metacritic.com/browse/game/">metacritic</a>. Code collects all games for all platforms, but it can be easily modified for specific searches.
+			</div>
+
+
+			<div class="single-recent-blog col-lg-4 col-md-4">
+				<div class="thumb">
+					<a href="https://www.kaggle.com/code/uuratl/nyc-restaurants-eda-analysis-recommendation" target="_blank">
+					<img class="f-img img-fluid" src="img/cover/dataset-nyc.jpg" alt="" style="width:250px;height:250px;">
+				</a>
+				</div>
+				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+
+				</div>
+				<a href="https://www.kaggle.com/code/uuratl/nyc-restaurants-eda-analysis-recommendation" target="_blank">
+					<h4>NYC Restaurants EDA/ Analysis, Recommendation System </h4>
+				</a>
+				<p>
+					Exploratory data analysis, data cleaning and basic collaborative filtering restaurant recomendation system for
+                           <a href="https://www.kaggle.com/datasets/ahsan81/food-ordering-and-delivery-app-dataset">NYC Restaurants Data - Food Ordering and Delivery</a> data.
+			</div>
+
+
+
+			<div class="single-recent-blog col-lg-4 col-md-4">
+				<div class="thumb">
+					<a href="https://www.kaggle.com/code/uuratl/fantasy-basketball-group-creator" target="_blank">
+					<img class="f-img img-fluid" src="img/cover/basketball.jpg" alt="" style="width:250px;height:250px;">
+				</a>
+				</div>
+				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+
+				</div>
+				<a href="https://www.kaggle.com/code/uuratl/fantasy-basketball-group-creator" target="_blank">
+					<h4>Fantasy Basketball Group Creator </h4>
+				</a>
+				<p>
+					Filtering players according to their roles, picking and grouping players in pick range. Comparing groups to find one with best composition.
+			</div>
+
+
+
+			<div class="single-recent-blog col-lg-4 col-md-4">
+				<div class="thumb">
+					<a href="https://www.kaggle.com/code/uuratl/american-sign-language-cnn" target="_blank">
+					<img class="f-img img-fluid" src="img/cover/dataset-asl.jpg" alt="" style="width:250px;height:250px;">
+				</a>
+				</div>
+				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+
+				</div>
+				<a href="https://www.kaggle.com/code/uuratl/american-sign-language-cnn" target="_blank">
+					<h4>American Sign Language CNN </h4>
+				</a>
+				<p>
+					Classification of images of American Sign Language with CNN model, 
+                          <a href="https://www.kaggle.com/datasets/ayuraj/asl-dataset">American Sign Language Dataset</a> and augmented forms of images are used for both training and testing.
+			</div>
+
+
+
+			<div class="single-recent-blog col-lg-4 col-md-4">
+				<div class="thumb">
+					<a href="https://www.kaggle.com/code/uuratl/mental-health-sentiment-analysis-multi-channel-cnn" target="_blank">
+					<img class="f-img img-fluid" src="img/cover/dataset-mental.jpg" alt="" style="width:250px;height:250px;">
+				</a>
+				</div>
+				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+
+				</div>
+				<a href="https://www.kaggle.com/code/uuratl/mental-health-sentiment-analysis-multi-channel-cnn" target="_blank">
+					<h4>Mental Health Sentiment Analysis Multi-channel CNN </h4>
+				</a>
+				<p>
+					Exploratory data analysis, NLP and  sentiment analysis by using multi-channel CNN for <a href="https://www.kaggle.com/datasets/suchintikasarkar/sentiment-analysis-for-mental-health">Sentiment Analysis for Mental Health Data</a>.
+			</div>
+
 
 			<div class="single-recent-blog col-lg-4 col-md-4">
 				<div class="thumb">
