--- a/about.html
+++ b/about.html
@@ -77,17 +77,13 @@
 						<div class="col-lg-5 col-md-6 home-about-right">
 							<h1 class="text-uppercase">Personal Details</h1>
 							<p>
-								I graduated from Istanbul Technical University with a degree in physics engineering. Studied cosmology, computational physics and gravity theories at collage. Academy was my dream, so I followed my dream. 
-								After graduating, I immediately started  MSc in physics engineering. During MSc education, I had the opportunity to skip graduation and start PhD, so I did. At the begining of Phd, I didn't know where my life was going. 
-								After some serious self - reflection about my passions and interests, I committed to learning everything I could about machine learning, deep learning and data science. 
-								One term after passing qualification exam, I left my doctorate. Actually I took an indefinete time of break, it is an achieve I have to complete. </p><p>
+								I graduated from Istanbul Technical University with a degree in Physics Engineering. During my undergraduate studies, I focused on cosmology, computational physics, and gravity theories. Pursuing an academic career has always been my dream, and I remained committed to this path. Upon completing my bachelor's degree, I immediately enrolled in a Master of Science (MSc) program in Physics Engineering. During my MSc studies, I was offered the opportunity to bypass the master's thesis and transition directly into a PhD program, which I accepted.
 
-
-								After leaving PhD. I focused data science, I followed online courses, webinears, read articles. I tried to upgrade myself almost every day, this was my passion.
-								I made some self - start projects both fulfill my desires and train myself, they are about NLP and finance.
-								NLP projects are mainly about sentiment analysis and text extraction, finance projects are mainly about price prediction, portfolio optimization, investment advice.</p><p>
+								At the beginning of my PhD journey, I was uncertain about the direction of my career. However, after thorough self-reflection regarding my passions and interests, I decided to dedicate myself to mastering machine learning, deep learning, and data science. One semester after passing my PhD qualification exam, I made the decision to take an indefinite leave of absence from the program. While this remains an achievement I intend to complete in the future, I chose to explore new opportunities aligned with my evolving interests.
 								
-								Recenly, I'm learning deep learning, working on another finance project and natural language processing project.
+								After stepping away from my PhD, I immersed myself in the field of data science. I actively pursued online courses, attended webinars, and engaged with research articles to expand my knowledge. Driven by my passion for continuous learning, I dedicated myself to self-improvement on a daily basis. To further develop my skills, I undertook several self-initiated projects in natural language processing (NLP) and finance. My NLP projects primarily involved sentiment analysis and text extraction, while my finance-related projects focused on price prediction, portfolio optimization, and investment advisory.
+								
+								Currently, I am deepening my expertise in deep learning and actively working on new projects in finance and natural language processing. These endeavors reflect my ongoing commitment to growth and innovation in the field of data science.
 
 							</p>
 							<a href="#contact_" class="primary-btn text-uppercase">Contact</a>
