--- a/about.html
+++ b/about.html
@@ -74,15 +74,15 @@
 						<div class="col-sm-7 col-centered">
 							<h1 class="text-uppercase">Personal Details</h1>
 							<p></p>
-							<p>
+							<p class="fz-16" align="justify">
 								I graduated from Istanbul Technical University with a degree in Physics Engineering. During my undergraduate studies, I focused on cosmology, computational physics, and gravity theories. Pursuing an academic career has always been my dream, and I remained committed to this path. Upon completing my bachelor's degree, I immediately enrolled in a Master of Science (MSc) program in Physics Engineering. During my MSc studies, I was offered the opportunity to bypass the master's thesis and transition directly into a PhD program, which I accepted.
 
 								At the beginning of my PhD journey, I was uncertain about the direction of my career. However, after thorough self-reflection regarding my passions and interests, I decided to dedicate myself to mastering machine learning, deep learning, and data science. One semester after passing my PhD qualification exam, I made the decision to take an indefinite leave of absence from the program. While this remains an achievement I intend to complete in the future, I chose to explore new opportunities aligned with my evolving interests.
 							</p>
-							<p>
+							<p class="fz-16" align="justify">
 								After stepping away from my PhD, I immersed myself in the field of data science. I actively pursued online courses, attended webinars, and engaged with research articles to expand my knowledge. Driven by my passion for continuous learning, I dedicated myself to self-improvement on a daily basis. To further develop my skills, I undertook several self-initiated projects in natural language processing (NLP) and finance. My NLP projects primarily involved sentiment analysis and text extraction, while my finance-related projects focused on price prediction, portfolio optimization, and investment advisory.
 							</p>
-							<p>
+							<p class="fz-16" align="justify">
 								Currently, I am deepening my expertise in deep learning and actively working on new projects in finance and natural language processing. These endeavors reflect my ongoing commitment to growth and innovation in the field of data science.
 							</p>	
 							<a href="#contact_" class="primary-btn text-uppercase">Contact</a>
