--- a/index.html
+++ b/index.html
@@ -81,12 +81,19 @@
 							<br>
 
 							<blockquote class="generic-blockquote">
-								<p class="fz-16">
-
-									I am a former physics Ph.D. candidate doing data science. I love learning. Everyday I push myself to learn something new, whether that be about machine learning, deep learning, python, statistics. Since we are limitless learning machines, there is no end for learning. I am also a social-avid video gamer, I love simulating, analyzing, comparing my , also I love solving problems, completing tasks, doing progress as a team.
+								<p class="fz-16" align="justify">
+									I am a former Ph.D. candidate in physics who has transitioned into the field of data science.
+									I have a deep passion for learning and continuously strive to expand my knowledge every day, whether it be in machine learning, deep learning, Python, or statistics. 
+									I firmly believe that, as limitless learners, there is no end to the pursuit of knowledge.
 								</p>
-								<p class="fz-16">
-									Apart from these, I am learning deep learning and also I started two data science project one for natural language processing and the other for finance.
+								<p class="fz-16" align="justify">
+									In addition to my professional interests, I am an enthusiastic social gamer. 
+									I enjoy simulating, analyzing, and comparing strategies, as well as collaborating with others to solve problems, complete tasks, and achieve progress as a team.
+								</p>								
+								<p class="fz-16" align="justify">
+									Currently, I am furthering my expertise in deep learning and machine learning, and trying different datascience projects. 
+									These projects reflect my commitment to applying my skills to real-world challenges and advancing my understanding of these domains.
+									
 								</p>								
 							</blockquote>
 							<a href="about" class="primary-btn text-uppercase">About me</a>
