--- a/archive.html
+++ b/archive.html
@@ -268,7 +268,8 @@
 
                             </h2>
                           <p>
-                          Exploratory data analysis, NLP and  sentiment analysis by using multi-channel CNN for <a href="https://www.kaggle.com/datasets/suchintikasarkar/sentiment-analysis-for-mental-health">Sentiment Analysis for Mental Health Data</a>.</p>
+                          Exploratory data analysis, NLP and  sentiment analysis by using multi-channel CNN for 
+                          <a href="https://www.kaggle.com/datasets/suchintikasarkar/sentiment-analysis-for-mental-health">Sentiment Analysis for Mental Health Data</a>.</p>
                         </div>
                         </div>
 
