--- a/index.html
+++ b/index.html
@@ -55,17 +55,14 @@
 			<section class="banner-area">
 				<div class="container">
 					<div class="row fullscreen align-items-center justify-content-between">
-						<div class="col-lg-6 col-md-6 col-xs-6 banner-left">
-							<h5>I am</h5>
+						<div class="col-centered">
+							<h5>Hello there, I am</h5>
 
 							<h2 class="mt-10 mb-20">Uğur Atlı</h2>
 							<p>
 								Data scientist.
 							</p>
 							<a href="#myprojects" class="primary-btn text-uppercase mb-20">My Projects</a>
-						</div>
-						<div class="col-lg-6 col-md-6 col-xs-6 banner-right align-self-center">
-							<img src="img/cover/pp.jpeg" style="width:auto;height:auto;max-width:100%;">
 						</div>
 					</div>
 				</div>
