--- a/index.html
+++ b/index.html
@@ -392,15 +392,15 @@
 
 			<div class="single-recent-blog col-lg-4 col-md-4">
 				<div class="thumb">
-					<a href="https://www.kaggle.com/code/uuratl/fantasy-basketball-group-creator" target="_blank">
+					<a href="https://www.kaggle.com/code/uuratl/fantasy-basketball-optimized-draft-helper" target="_blank">
 					<img class="f-img img-fluid" src="img/cover/basketball.jpg" alt="" style="width:250px;height:250px;">
 				</a>
 				</div>
 				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
 
 				</div>
-				<a href="https://www.kaggle.com/code/uuratl/fantasy-basketball-group-creator" target="_blank">
-					<h4>Fantasy Basketball Group Creator </h4>
+				<a href="https://www.kaggle.com/code/uuratl/fantasy-basketball-optimized-draft-helper" target="_blank">
+					<h4>Fantasy Basketball Optimized Draft Helper </h4>
 				</a>
 				<p>
 					Filtering players according to their roles, picking and grouping players in pick range. Comparing groups to find one with best composition.
