--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
 								After stepping away from my PhD, I immersed myself in the field of data science. I actively pursued online courses, attended webinars, and engaged with research articles to expand my knowledge. Driven by my passion for continuous learning, I dedicated myself to self-improvement on a daily basis. To further develop my skills, I undertook several self-initiated projects in natural language processing (NLP) and finance. My NLP projects primarily involved sentiment analysis and text extraction, while my finance-related projects focused on price prediction, portfolio optimization, and investment advisory.
 							</p>
 							<p class="fz-16" align="justify">
-								Currently, I am deepening my expertise in deep learning and actively working on new projects in finance and natural language processing. These endeavors reflect my ongoing commitment to growth and innovation in the field of data science.
+								Currently, I am deepening my expertise in deep learning and actively working on new projects in finance, recomendation systems and natural language processing. These endeavors reflect my ongoing commitment to growth and innovation in the field of data science.
 							</p>	
 							<a href="#contact_" class="primary-btn text-uppercase">Contact</a>
 						</div>
